Bug fixing a lot of things - now the site looks very good on mobile devices - a few other changes are done too

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,19 +10,19 @@
 }
 
 .spacer-top1 {
-    margin-top: 50px;
+    padding-top: 50px;
 }
 
 .spacer-bottom1 {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 .spacer-top2 {
-    margin-top: 100px;
+    padding-top: 100px;
 }
 
 .spacer-bottom2 {
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .h1 {
